use fixed width for scrollbar content area

--- a/src/sheet/sheet.styl
+++ b/src/sheet/sheet.styl
@@ -34,7 +34,7 @@ width = w(80)
     &.left, &.right
         height 100%
         overflow-x hidden
-        overflow-y auto
+        overflow-y scroll
         width width
     &.left
         transform translateX(0 - width)
